added github widget

--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
 								<header>
 									<h2>Contact Me</h2>
 								</header>
+								<p><div class="github-widget" data-username="jeremysmai"></div>
+									<script src="https://unpkg.com/github-card@1.2.1/dist/widget.js"></script></p>
 								<!--form action="#" method="post">
 									<div>
 										<div class="row">
