--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 								<header>
 									<h1>Phantom Inc</h1>
 									<p>Hidden In The Shadows</p>
-									<h4>The Official Site, navigate using the icons above.</h4>
+									<h4>The Official Site(In progress), navigate using the icons above.</h4>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon fa-chevron-right"></span>
-									<img src="images/logo.jpg" height="400" width="400"alt="PhantomInc" />
+									<img src="images/logo.jpg" height="300" width="300"alt="PhantomInc" />
 								</a>
 							</article>
 
