--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<a href="#work" class="icon fa-image"><span>Photography</span></a>
 						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
 						<a href="downloads.html" class="icon fa-download"><span>Downloads</span></a>|
-						<a href="username.html" class="icon fa-user-secret"><span>jeremysmai</span></a>
+						<a href="http://phantominc.net" class="icon fa-user-secret"><span>jeremysmai</span></a>
 						<!--a href="https://twitter.com/jeremysmai" class="icon fa-twitter"><span>Twitter</span></a-->
 						<a href="https://github.com/jeremysmai" class="icon fa-github"><span>Github</span></a>
 						<!--a href="https://instagram.com/phant0m1nc" class="icon fa-instagram"><span>Instagram</span></a-->
