--- a/newindex.html
+++ b/newindex.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
   <title>Phantom Inc.</title>
+    <header>
+      <center>
+        <img src="images/logo.jpg" />
+      </center>
+    </header>
     <body>
 <!--Menu-->
     <ul>
-      <li><a href=""> Home </a></li>
-      <li><a href=""> Downloads </a></li>
-      <li><a href=""> Contact </a></li>
-      <li><a href=""> jeremysmai </a></li>
+      <li><a href="newindex.html"> Home </a></li>
+      <li><a href="#downloads"> Downloads </a></li>
+      <li><a href="#contact"> Contact </a></li>
+      <li><a href="#jeremysmai"> jeremysmai </a></li>
     </ul>
 <!-- Projects -->
 <center>
