--- a/newindex.html
+++ b/newindex.html
@@ -19,7 +19,7 @@
   <table style="width:100%">
   <caption>Finished Projects</caption>
   <tr>
-    <th><a href="https://www.personalizedpalates.com"><img src="PP_logo.png" />Personalized Palates</a></th>
+    <th><a href="https://www.personalizedpalates.com"><img src="images/PP_logo.png" />Personalized Palates</a></th>
     <th><a href=""><img src="JNM_logo.png" />JNM Visuals</a></th>
   </tr>
   </table>
