--- a/newindex.html
+++ b/newindex.html
@@ -29,6 +29,7 @@
     <th><a href=""><img src="icon.png" />JNM VISUALS</a></th>
     <th><a href=""><img src="icon.png" />Upcoming Project</a></th>
   </tr>
+</table>
 </center>
 
   </body>
