formatting all day

--- a/newindex.html
+++ b/newindex.html
@@ -3,7 +3,7 @@
   <title>Phantom Inc.</title>
     <header>
       <center>
-        <img src="images/logo.jpg" />
+        <img src="images/logo.jpg" height="250" width="250"/>
       </center>
     </header>
     <body>
@@ -16,14 +16,14 @@
     </ul>
 <!-- Projects -->
 <center>
-  <table style="width:100%">
+  <table style="width:50%">
   <caption>Finished Projects</caption>
   <tr>
     <th><a href="https://www.personalizedpalates.com"><img src="images/PP_logo.png" />Personalized Palates</a></th>
     <th><a href=""><img src="JNM_logo.png" />JNM Visuals</a></th>
   </tr>
   </table>
-  <table style="width:100%">
+  <table style="width:50%">
   <caption>In Progress : Projects</caption>
   <tr>
     <th><a href=""><img src="icon.png" />JNM VISUALS</a></th>
