Editing some lists

--- a/newindex.html
+++ b/newindex.html
@@ -2,22 +2,27 @@
 <html>
   <title>Phantom Inc.</title>
     <header>
-      <center>
+      <link rel="stylesheet" href="css/main.css" />
+		  <link rel=icon href=images/favicon.png sizes="16x16" type="image/png">
+    <center>
         <img src="images/logo.jpg" height="250" width="250"/>
-      </center>
+    </center>
     </header>
     <body>
 <!--Menu-->
+  <div>
     <ol>
       <li><a href="newindex.html"> Home </a></li>
       <li><a href="#downloads"> Downloads </a></li>
       <li><a href="#contact"> Contact </a></li>
       <li><a href="#jeremysmai"> jeremysmai </a></li>
     </ol>
+  </div>
 <!-- Projects -->
-<center>
-  <table style="width:50%">
-  <caption>Finished Projects</caption>
+  <div>
+    <center>
+      <table style="width:50%">
+        <caption>Finished Projects</caption>
   <tr>
     <th><a href="https://www.personalizedpalates.com"><img src="images/PP_logo.png" />Personalized Palates</a></th>
     <th><a href=""><img src="JNM_logo.png" />JNM Visuals</a></th>
@@ -29,11 +34,14 @@
     <th><a href=""><img src="icon.png" />JNM VISUALS</a></th>
     <th><a href=""><img src="icon.png" />Upcoming Project</a></th>
   </tr>
-</table>
-</center>
+      </table>
+    </center>
+  </div>
+</body>
 
-  </body>
+<!-- Footer -->
 <footer>
   <center>&copy; |" | Phantom Inc 2018</center>
 </footer>
+
 </html>
