--- a/newindex.html
+++ b/newindex.html
@@ -5,7 +5,7 @@
       <link rel="stylesheet" href="css/main.css" />
 		  <link rel=icon href=images/favicon.png sizes="16x16" type="image/png">
     <center>
-        <img src="images/logo.jpg" height="250" width="250"/>
+        <img src="images/fresh_logo.JPG" height="250" width="250"/>
     </center>
     </header>
     <body>
