--- a/newindex.html
+++ b/newindex.html
@@ -24,15 +24,15 @@
       <table style="width:25%">
         <caption>Finished Projects</caption>
   <tr>
-    <th><a href="https://www.personalizedpalates.com"><img src="images/PP_logo.png" />Personalized Palates</a></th>
-    <th><a href=""><img src="JNM_logo.png" />JNM Visuals</a></th>
+    <th><a href="https://www.personalizedpalates.com"><img src="images/PP_logo.png" /><br/>Personalized Palates</a></th>
+    <th><a href=""><img src="JNM_logo.png" /><br />JNM Visuals</a></th>
   </tr>
   </table>
   <table style="width:25%">
   <caption>In Progress : Projects</caption>
   <tr>
-    <th><a href=""><img src="icon.png" />JNM VISUALS</a></th>
-    <th><a href=""><img src="icon.png" />Upcoming Project</a></th>
+    <th><a href=""><img src="icon.png" /><br />JNM VISUALS</a></th>
+    <th><a href=""><img src="icon.png" /><br />Upcoming Project</a></th>
   </tr>
       </table>
     </center>
