--- a/newindex.html
+++ b/newindex.html
@@ -25,7 +25,7 @@
         <caption>Finished Projects</caption>
   <tr>
     <th><a href="https://www.personalizedpalates.com"><img src="images/PP_logo.png" /><br/>Personalized Palates</a></th>
-    <th><a href=""><img src="JNM_logo.png" /><br />JNM Visuals</a></th>
+    <th><a href=""><img src="JNM_logo.JPG" /><br />JNM Visuals</a></th>
   </tr>
   </table>
   <table style="width:25%">
