index formatting bg finally

--- a/newindex.html
+++ b/newindex.html
@@ -10,6 +10,7 @@
     </header>
     <body>
 <!--Menu-->
+<center>
   <div>
     <ul>
       <li><a href="newindex.html"> Home </a></li>
@@ -18,6 +19,8 @@
       <li><a href="#jeremysmai"> jeremysmai </a></li>
     </ul>
   </div>
+</center>
+
 <!-- Projects -->
   <div>
     <center>
