test test is this thing on?

--- a/jeremysmai.html
+++ b/jeremysmai.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <title>jeremysmai</title>
+  <header>
 
-<img src="images/switch_code.JPG" />
+  </header>
+  <body>
+    <img src="images/switch_code.JPG" />
+  </body>
+
+  <footer>
+
+  </footer>
 </html>
