format that footer

--- a/newindex.html
+++ b/newindex.html
@@ -44,7 +44,7 @@
 
 <!-- Footer -->
 <footer>
-  <center>&copy; |" | Phantom Inc 2018</center>
+  <center> |" | Phantom Inc 2018 &copy; </center>
 </footer>
 
 </html>
