--- a/newindex.html
+++ b/newindex.html
@@ -14,6 +14,7 @@
   <div>
     <ul>
       <li><a href="newindex.html"> Home </a></li>
+      <li><a href="#work"> Photography </a></li>
       <li><a href="#downloads" class="icon fa-download"> Downloads </a></li>
       <li><a href="#contact"> Contact </a></li>
       <li><a href="#jeremysmai"> jeremysmai </a></li>
