format that css

--- a/newindex.html
+++ b/newindex.html
@@ -11,7 +11,7 @@
     <body>
 <!--Menu-->
 <center>
-  <div>
+  <div class="nav">
     <ul>
       <li><a href="newindex.html"> Home </a></li>
       <li><a href="#work"> Photography </a></li>
