--- a/newindex.html
+++ b/newindex.html
@@ -16,7 +16,7 @@
     <ul>
       <li><a href="newindex.html"> Home </a></li>
       <li><a href="#work"> Photography </a></li>
-      <li><a href="#downloads" class="fa-download"> Downloads </a></li>
+      <li><a href="#downloads" class="icon fas fa-download"> Downloads </a></li>
       <li><a href="#contact"> Contact </a></li>
       <li><a href="#jeremysmai"> jeremysmai </a></li>
     </ul>
