--- a/newindex.html
+++ b/newindex.html
@@ -3,7 +3,7 @@
   <title>Phantom Inc.</title>
     <head>
       <link rel="stylesheet" href="css/main.css" />
-      <!--link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous"-->
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 		  <link rel=icon href=images/favicon.png sizes="16x16" type="image/png">
     <center>
         <img src="images/fresh_logo.JPG" height="250" width="250"/>
@@ -14,11 +14,11 @@
 <center>
   <div class="nav">
     <ul>
-      <li><a href="newindex.html"> Home </a></li>
-      <li><a href="#work"> Photography </a></li>
+      <li><a href="newindex.html" class="fas fa-home"> Home </a></li>
+      <li><a href="#work" class="fas fa-camera-retro"> Photography </a></li>
       <li><a href="#downloads" class="icon fas fa-download"> Downloads </a></li>
-      <li><a href="#contact"> Contact </a></li>
-      <li><a href="#jeremysmai"> jeremysmai </a></li>
+      <li><a href="#contact" class="fas fa-address-book"> Contact </a></li>
+      <li><a href="#jeremysmai" class="fas fa-user-ninja"> jeremysmai </a></li>
     </ul>
   </div>
 </center>
