--- a/newindex.html
+++ b/newindex.html
@@ -34,7 +34,7 @@
   </tr>
   </table>
   <table style="width:25%">
-  <caption><h2>In Progress : Projects</h2></caption>
+  <caption><h2><i>In Progress : Projects</i></h2></caption>
   <tr>
     <th><a href=""><img src="images/JNM_logo.JPG" /><br />JNM VISUALS</a></th>
     <th><a href=""><img src="images/logo.jpg" height="100" width="100" /><br />Upcoming Project</a></th>
