--- a/newindex.html
+++ b/newindex.html
@@ -14,7 +14,7 @@
 <center>
   <div class="nav">
     <ul>
-      <li><a href="newindex.html" class="fas fa-home"> Home </a></li>
+      <li><button><a href="newindex.html" class="fas fa-home"> Home </a></button></li>
       <li><a href="#work" class="fas fa-camera-retro"> Photography </a></li>
       <li><a href="#downloads" class="icon fas fa-download"> Downloads </a></li>
       <li><a href="#contact" class="fas fa-address-book"> Contact </a></li>
