--- a/newindex.html
+++ b/newindex.html
@@ -14,11 +14,11 @@
 <center>
   <div class="nav">
     <ul>
-      <li><button><a href="newindex.html" class="fas fa-home"> Home </a></button></li>
-      <li><a href="#work" class="fas fa-camera-retro"> Photography </a></li>
-      <li><a href="#downloads" class="icon fas fa-download"> Downloads </a></li>
-      <li><a href="#contact" class="fas fa-address-book"> Contact </a></li>
-      <li><a href="#jeremysmai" class="fas fa-user-ninja"> jeremysmai </a></li>
+      <li><a href="newindex.html" class="fas fa-home"><button> Home </button></a></li>
+      <li><a href="#work" class="fas fa-camera-retro"><button> Photography </button></a></li>
+      <li><a href="#downloads" class="icon fas fa-download"><button> Downloads </button></a></li>
+      <li><a href="#contact" class="fas fa-address-book"><button> Contact </button></a></li>
+      <li><a href="#jeremysmai" class="fas fa-user-ninja"><button> jeremysmai </button></a></li>
     </ul>
   </div>
 </center>
