edited button for css

--- a/newindex.html
+++ b/newindex.html
@@ -14,7 +14,7 @@
 <center>
   <div class="nav">
     <ul>
-      <li><a href="newindex.html" class="fas fa-home"><button> Home </button></a></li>
+      <li><a href="newindex.html" class="fas fa-home"><button class="menu"> Home </button></a></li>
       <li><a href="#work" class="fas fa-camera-retro"><button> Photography </button></a></li>
       <li><a href="#downloads" class="icon fas fa-download"><button> Downloads </button></a></li>
       <li><a href="#contact" class="fas fa-address-book"><button> Contact </button></a></li>
