scaling for mobile now

--- a/newindex.html
+++ b/newindex.html
@@ -4,7 +4,8 @@
     <head>
       <link rel="stylesheet" href="css/main.css" />
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-		  <link rel=icon href=images/favicon.png sizes="16x16" type="image/png">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel=icon href=images/favicon.png sizes="16x16" type="image/png">
     <center>
         <img src="images/fresh_logo.JPG" height="250" width="250"/>
     </center>
