new menu colors

--- a/newindex.html
+++ b/newindex.html
@@ -16,10 +16,10 @@
   <div class="nav">
     <ul>
       <li><a href="newindex.html" class="fas fa-home"><button class="menu"> Home </button></a></li>
-      <li><a href="#work" class="fas fa-camera-retro"><button> Photography </button></a></li>
-      <li><a href="#downloads" class="icon fas fa-download"><button> Downloads </button></a></li>
-      <li><a href="#contact" class="fas fa-address-book"><button> Contact </button></a></li>
-      <li><a href="#jeremysmai" class="fas fa-user-ninja"><button> jeremysmai </button></a></li>
+      <li><a href="#work" class="fas fa-camera-retro"><button class="menu"> Photography </button></a></li>
+      <li><a href="#downloads" class="icon fas fa-download"><button class="menu"> Downloads </button></a></li>
+      <li><a href="#contact" class="fas fa-address-book"><button class="menu"> Contact </button></a></li>
+      <li><a href="#jeremysmai" class="fas fa-user-ninja"><button class="menu"> jeremysmai </button></a></li>
     </ul>
   </div>
 </center>
