--- a/newindex.html
+++ b/newindex.html
@@ -15,11 +15,11 @@
 <center>
   <div class="nav">
     <ul>
-      <li><a href="newindex.html" class="fas fa-home"><button class="menu"> Home </button></a></li>
-      <li><a href="#work" class="fas fa-camera-retro"><button class="menu"> Photography </button></a></li>
-      <li><a href="#downloads" class="icon fas fa-download"><button class="menu"> Downloads </button></a></li>
-      <li><a href="#contact" class="fas fa-address-book"><button class="menu"> Contact </button></a></li>
-      <li><a href="#jeremysmai" class="fas fa-user-ninja"><button class="menu"> jeremysmai </button></a></li>
+      <li><button class="menu"><a href="newindex.html" class="fas fa-home"> Home </a></button></li>
+      <li><button class="menu"><a href="#work" class="fas fa-camera-retro"><button class="menu"> Photography </a></button></li>
+      <li><button class="menu"><a href="#downloads" class="icon fas fa-download"><button class="menu"> Downloads </a></button></li>
+      <li><button class="menu"><a href="#contact" class="fas fa-address-book"><button class="menu"> Contact </a></button></li>
+      <li><button class="menu"><a href="#jeremysmai" class="fas fa-user-ninja"><button class="menu"> jeremysmai </a></button></li>
     </ul>
   </div>
 </center>
