edits to buttons finally

--- a/newindex.html
+++ b/newindex.html
@@ -16,10 +16,10 @@
   <div class="nav">
     <ul>
       <li><button class="menu"><a href="newindex.html" class="fas fa-home"> Home </a></button></li>
-      <li><button class="menu"><a href="#work" class="fas fa-camera-retro"><button class="menu"> Photography </a></button></li>
-      <li><button class="menu"><a href="#downloads" class="icon fas fa-download"><button class="menu"> Downloads </a></button></li>
-      <li><button class="menu"><a href="#contact" class="fas fa-address-book"><button class="menu"> Contact </a></button></li>
-      <li><button class="menu"><a href="#jeremysmai" class="fas fa-user-ninja"><button class="menu"> jeremysmai </a></button></li>
+      <li><button class="menu"><a href="#work" class="fas fa-camera-retro"> Photography </a></button></li>
+      <li><button class="menu"><a href="#downloads" class="icon fas fa-download"> Downloads </a></button></li>
+      <li><button class="menu"><a href="#contact" class="fas fa-address-book"> Contact </a></button></li>
+      <li><button class="menu"><a href="#jeremysmai" class="fas fa-user-ninja"> jeremysmai </a></button></li>
     </ul>
   </div>
 </center>
