--- a/newindex.html
+++ b/newindex.html
@@ -15,11 +15,11 @@
 <center>
   <div class="nav">
     <ul>
-      <li><button class="menu"><a href="newindex.html" class="fas fa-home"> Home </a></button></li>
-      <li><button class="menu"><a href="#work" class="fas fa-camera-retro"> Photography </a></button></li>
-      <li><button class="menu"><a href="#downloads" class="icon fas fa-download"> Downloads </a></button></li>
-      <li><button class="menu"><a href="#contact" class="fas fa-address-book"> Contact </a></button></li>
-      <li><button class="menu"><a href="#jeremysmai" class="fas fa-user-ninja"> jeremysmai </a></button></li>
+      <li><button class="menu"><a href="newindex.html"><i class="fas fa-home"></i> Home </a></button></li>
+      <li><button class="menu"><a href="#work"><i class="fas fa-camera-retro"></i> Photography </a></button></li>
+      <li><button class="menu"><a href="#downloads"><i class="icon fas fa-download"></i> Downloads </a></button></li>
+      <li><button class="menu"><a href="#contact"><i class="fas fa-address-book"></i> Contact </a></button></li>
+      <li><button class="menu"><a href="#jeremysmai"><i class="fas fa-user-ninja"></i> jeremysmai </a></button></li>
     </ul>
   </div>
 </center>
