--- a/newindex.html
+++ b/newindex.html
@@ -15,7 +15,7 @@
 <center>
   <div class="nav">
     <ul>
-      <li><button class="menu"><a href="newindex.html"><i class="fas fa-home"></i> Home </a></button></li>
+      <li><button class="menu"><a href="newindex.html"><i class="fas fa-home"></i> Home </button></a></li>
       <li><button class="menu"><a href="#work"><i class="fas fa-camera-retro"></i> Photography </a></button></li>
       <li><button class="menu"><a href="#downloads"><i class="icon fas fa-download"></i> Downloads </a></button></li>
       <li><button class="menu"><a href="#contact"><i class="fas fa-address-book"></i> Contact </a></button></li>
