--- a/newindex.html
+++ b/newindex.html
@@ -16,10 +16,10 @@
   <div class="nav">
     <ul>
       <li><a href="newindex.html"><button class="menu"><i class="fas fa-home"></i> Home </button></a></li>
-      <li><a href="#work"><button class="menu"><i class="fas fa-camera-retro"></i> Photography </a></button></li>
-      <li><a href="#downloads"><button class="menu"><i class="icon fas fa-download"></i> Downloads </a></button></li>
-      <li><a href="#contact"><button class="menu"><i class="fas fa-address-book"></i> Contact </a></button></li>
-      <li><a href="#jeremysmai"><button class="menu"><i class="fas fa-user-ninja"></i> jeremysmai </a></button></li>
+      <li><a href="#work"><button class="menu"><i class="fas fa-camera-retro"></i> Photography </button></a></li>
+      <li><a href="#downloads"><button class="menu"><i class="icon fas fa-download"></i> Downloads </button></a></li>
+      <li><a href="#contact"><button class="menu"><i class="fas fa-address-book"></i> Contact </button></a></li>
+      <li><a href="#jeremysmai"><button class="menu"><i class="fas fa-user-ninja"></i> jeremysmai </button></a></li>
     </ul>
   </div>
 </center>
