--- a/newindex.html
+++ b/newindex.html
@@ -13,7 +13,7 @@
     <body>
 <!--Menu-->
 <center>
-  <div class="nav">
+  <div class="menu">
     <ul>
       <li><a href="newindex.html"><button class="menu"><i class="fas fa-home"></i> Home </button></a></li>
       <li><a href="#work"><button class="menu"><i class="fas fa-camera-retro"></i> Photography </button></a></li>
