added link for JNM

--- a/newindex.html
+++ b/newindex.html
@@ -37,7 +37,7 @@
   <table style="width:60%">
   <caption><h1><i><u> In Progress : Projects </u></i></h1></caption>
   <tr>
-    <th><a href=""><img src="images/JNM_logo.JPG" /><br />JNM VISUALS</a></th>
+    <th><a href="https://www.facebook.com/jnmvisuals/"><img src="images/JNM_logo.JPG" /><br />JNM VISUALS</a></th>
     <th><a href=""><img src="images/logo.jpg" height="100" width="100" /><br />Upcoming Project</a></th>
   </tr>
       </table>
