added Phantom Inc link FB

--- a/newindex.html
+++ b/newindex.html
@@ -38,7 +38,7 @@
   <caption><h1><i><u> In Progress : Projects </u></i></h1></caption>
   <tr>
     <th><a href="https://www.facebook.com/jnmvisuals/"><img src="images/JNM_logo.JPG" /><br />JNM VISUALS</a></th>
-    <th><a href=""><img src="images/logo.jpg" height="100" width="100" /><br />Upcoming Project</a></th>
+    <th><a href="https://www.facebook.com/phant0m1nc/"><img src="images/logo.jpg" height="100" width="100" /><br />Upcoming Project</a></th>
   </tr>
       </table>
     </center>
