--- a/indextemp.html
+++ b/indextemp.html
@@ -11,12 +11,18 @@
 </head>
 
   <body>
-  <center><img src="" alt="" /></center>
+  <center><img src="images/fresh_logo.JPG" alt="Phantom Inc Logo" />
+<ul>
   <li> OfficialSiteLink & Icon </li>
   <li> TwitterLink & Icon </li>
   <li> Facebook Link(s) & Icon </li> <!-- Add Rollover to feature both Facebook Pages -->
+  <li> Youtube Link & Icon </li>
   <li> Github Repo Link & Icon </li>
-  
-
+</ul>
+</center>
   </body>
+
+  <footer>
+    <center><b> &copy; Phantom Inc. 2018 version: .00 </b></center>
+  </footer>
 </html>
