format with css

--- a/indextemp.html
+++ b/indextemp.html
@@ -6,12 +6,12 @@
 <html>
 <head>
   <title>Phantom Inc (Coming Soon)</title>
-  <script>
-  </script>
+  <link rel="stylesheet" href="assets/css/main.css" />
+  <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
 
   <body>
-  <center><img src="images/fresh_logo.JPG" alt="Phantom Inc Logo" />
+  <center><img src="images/fresh_logo.JPG" height="1000" width="1000" alt="Phantom Inc Logo" />
 <ul>
   <li> OfficialSiteLink & Icon </li>
   <li> TwitterLink & Icon </li>
