edits background time

--- a/indextemp.html
+++ b/indextemp.html
@@ -6,18 +6,18 @@
 <html>
 <head>
   <title>Phantom Inc (Coming Soon)</title>
-  <link rel="stylesheet" href="assets/css/main.css" />
+  <link rel="stylesheet" href="css/main.css" />
   <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
 
   <body>
   <center><img src="images/fresh_logo.JPG" height="1000" width="1000" alt="Phantom Inc Logo" />
 <ul>
-  <li> OfficialSiteLink & Icon </li>
-  <li> TwitterLink & Icon </li>
-  <li> Facebook Link(s) & Icon </li> <!-- Add Rollover to feature both Facebook Pages -->
-  <li> Youtube Link & Icon </li>
-  <li> Github Repo Link & Icon </li>
+  <li><a href=""><button class="menu"><i class=""></i> OfficialSiteLink & Icon </button></a></li>
+  <li><a href=""><button class="menu"><i class=""></i> TwitterLink & Icon </button></a></li>
+  <li><a href=""><button class="menu"><i class=""></i> Facebook Link(s) & Icon </button></a></li> <!-- Add Rollover to feature both Facebook Pages -->
+  <li><a href=""><button class="menu"><i class=""></i> Youtube Link & Icon </button></a></li>
+  <li><a href=""><button class="menu"><i class=""></i> Github Repo Link & Icon </button></a></li>
 </ul>
 </center>
   </body>
