orange to spruce it up and green

--- a/indextemp.html
+++ b/indextemp.html
@@ -13,7 +13,7 @@
   <body>
   <center><img src="images/fresh_logo.JPG" height="500" width="500" alt="Phantom Inc Logo" />
 <ul>
-  <li><a href=""><button class="menu"><i class=""></i> OfficialSiteLink & Icon </button></a></li>
+  <li><a href=""><button class="menu"><i class="fas fa-home"></i></button></a></li>
   <li><a href=""><button class="menu"><i class=""></i> TwitterLink & Icon </button></a></li>
   <li><a href=""><button class="menu"><i class=""></i> Facebook Link(s) & Icon </button></a></li> <!-- Add Rollover to feature both Facebook Pages -->
   <li><a href=""><button class="menu"><i class=""></i> Youtube Link & Icon </button></a></li>
