--- a/indextemp.html
+++ b/indextemp.html
@@ -11,13 +11,13 @@
 </head>
 
   <body>
-  <center><img src="images/fresh_logo.JPG" height="500" width="500" alt="Phantom Inc Logo" />
+  <center><img src="images/fresh_logo.JPG" height="450" width="450" alt="Phantom Inc Logo" />
 <ul>
-  <li><a href=""><button class="menu"><i class="fas fa-home"></i></button></a></li>
-  <li><a href=""><button class="menu"><i class=""></i> TwitterLink & Icon </button></a></li>
-  <li><a href=""><button class="menu"><i class=""></i> Facebook Link(s) & Icon </button></a></li> <!-- Add Rollover to feature both Facebook Pages -->
-  <li><a href=""><button class="menu"><i class=""></i> Youtube Link & Icon </button></a></li>
-  <li><a href=""><button class="menu"><i class=""></i> Github Repo Link & Icon </button></a></li>
+  <li><a href=""><button class="menu"><i class="icon fas fa-home"></i></button></a></li>
+  <li><a href=""><button class="menu"><i class="icon fa-twitter"></i></button></a></li>
+  <li><a href=""><button class="menu"><i class="icon fab fa-facebook"></i> Facebook Link(s) </button></a></li> <!-- Add Rollover to feature both Facebook Pages -->
+  <li><a href=""><button class="menu"><i class="icon fab fa-youtube"></i></button></a></li>
+  <li><a href=""><button class="menu"><i class="icon fa-github"></i></button></a></li>
 </ul>
 </center>
   </body>
