--- a/indextemp.html
+++ b/indextemp.html
@@ -13,11 +13,11 @@
   <body>
   <center><img src="images/fresh_logo.JPG" height="450" width="450" alt="Phantom Inc Logo" />
 <ul>
-  <li><a href=""><button class="menu"><i class="fas fa-home"></i></button></a></li>
-  <li><a href=""><button class="menu"><i class="fa-twitter"></i></button></a></li>
+  <li><a href=""><button class="menu"><i class="fab fa-home"></i></button></a></li>
+  <li><a href=""><button class="menu"><i class="fas fa-twitter"></i></button></a></li>
   <li><a href=""><button class="menu"><i class="fab fa-facebook"></i> Facebook Link(s) </button></a></li> <!-- Add Rollover to feature both Facebook Pages -->
   <li><a href=""><button class="menu"><i class="fab fa-youtube"></i></button></a></li>
-  <li><a href=""><button class="menu"><i class="fa-github"></i></button></a></li>
+  <li><a href=""><button class="menu"><i class="fas fa-github"></i></button></a></li>
 </ul>
 </center>
   </body>
