--- a/indextemp.html
+++ b/indextemp.html
@@ -13,7 +13,7 @@
   <body>
   <center><img src="images/fresh_logo.JPG" height="450" width="450" alt="Phantom Inc Logo" />
 <ul>
-  <li><a href=""><button class="menu"><i class="icon fa-home"></i></button></a></li>
+  <li><a href=""><button class="menu"><i class="fab fa-home"></i></button></a></li>
   <li><a href=""><button class="menu"><i class="fab fa-twitter"></i></button></a></li>
   <li><a href=""><button class="menu"><i class="fab fa-facebook"></i> Facebook Link(s) </button></a></li> <!-- Add Rollover to feature both Facebook Pages -->
   <li><a href=""><button class="menu"><i class="fab fa-youtube"></i></button></a></li>
