--- a/indextemp.html
+++ b/indextemp.html
@@ -11,7 +11,8 @@
 </head>
 
   <body>
-  <center><img src="images/fresh_logo.JPG" height="250" width="250" alt="Phantom Inc Logo" />
+  <center><img src="images/fresh_logo.JPG" height="250" width="250" alt="Phantom Inc Logo" /></center>
+  <center>
 <ul>
   <li><a href=""><button class="menu"><i class="fab fa-fort-awesome"></i></button></a></li>
   <li><a href=""><button class="menu"><i class="fab fa-twitter"></i></button></a></li>
