--- a/indextemp.html
+++ b/indextemp.html
@@ -16,7 +16,7 @@
 <ul>
   <li><a href="http://phantominc.net"><button class="menu"><i class="fab fa-fort-awesome"></i></button></a></li>
   <li><a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i></button></a></li>
-  <li><a href=""><button class="menu"><i class="fab fa-facebook"></i> Facebook Link(s)</button></a></li> <!-- Add Rollover to feature both Facebook Pages -->
+  <li><a href=""><button class="menu"><i class="fab fa-facebook"></i></button></a></li> <!-- Add Rollover to feature both Facebook Pages -->
   <li><a href="https://www.youtube.com/jeremysmai"><button class="menu"><i class="fab fa-youtube"></i></button></a></li>
   <li><a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a></li>
 </ul>
