--- a/indextemp.html
+++ b/indextemp.html
@@ -11,7 +11,7 @@
 </head>
 
   <body>
-  <div class="logo"><center><img src="images/fresh_logo.JPG" height="250" width="250" alt="Phantom Inc Logo" /></center></div>
+  <center><img src="images/fresh_logo.JPG" class="logo" height="250" width="250" alt="Phantom Inc Logo" /></center>
     <p>
       <center>
   <li><a href="http://phantominc.net"><button class="menu"><i class="fab fa-fort-awesome"></i></button></a></li>
