--- a/index.html
+++ b/index.html
@@ -17,15 +17,12 @@
   <li><a href="http://phantominc.net"><button class="menu"><i class="fab fa-fort-awesome"></i></button></a></li>
   <li><a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i></button></a></li>
   <li>
-  <div class="dropdown">
     <button class="dropbtn">
       <i class="fab fa-facebook"></i>
     </button>
-    <div class="menu">
       <a href="https://www.facebook.com/phant0m1nc/">Phantom Inc</a>
       <a href="https://www.facebook.com/jnmvisuals/">JNM VISUALS</a>
-    </div>
-  </div></li> <!-- Add Rollover to feature both Facebook Pages -->
+    </li> <!-- Add Rollover to feature both Facebook Pages -->
   <li><a href="https://www.youtube.com/jeremysmai"><button class="menu"><i class="fab fa-youtube"></i></button></a></li>
   <li><a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a></li>
     </center>
