no more icon border

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <li><a href="http://phantominc.net"><button class="menu"><i class="fab fa-fort-awesome"></i></button></a></li>
   <li><a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i></button></a></li>
   <li>
-    <button class="dropbtn">
+    <button class="menu">
       <i class="fab fa-facebook"></i>
     </button>
       <a href="https://www.facebook.com/phant0m1nc/">Phantom Inc</a>
