--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
   <li><a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a></li>
     </center>
   </p>
+  <p>
+    <center><button><i class="fa fa-spinner fa-spin"></i>Site Being Built, Hold Tight</button></center>
+  </p>
   </body>
 
   <footer>
