fix that bottom button

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </center>
   </p>
   <p>
-    <center><button><i class="fa fa-spinner fa-spin"></i>Site Being Built, Hold Tight</button></center>
+    <center><button class="menu"><i class="fa fa-spinner fa-spin"></i>Site Being Built, Hold Tight</button></center>
   </p>
   </body>
 
