--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </center>
   </p>
   <p>
-    <center><button class="menu"><i class="fab fa-spinner fa-spin"></i>Site Being Built, Hold Tight</button></center>
+    <center><button class="fbmenu"><i class="fas fa-spinner fa-spin"></i>Site Being Built, Hold Tight</button></center>
   </p>
   </body>
 
