--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <button class="fbmenu">
       <i class="fab fa-facebook"></i>
     </button>
-    <div class="fb">
+    <button class="fb">
       <a href="https://www.facebook.com/phant0m1nc/">Phantom Inc</a>
       <a href="https://www.facebook.com/jnmvisuals/">JNM VISUALS</a>
-    </div>
+    </button>
     </li> <!-- Add Rollover to feature both Facebook Pages -->
   <li><a href="https://www.youtube.com/jeremysmai"><button class="menu"><i class="fab fa-youtube"></i></button></a></li>
   <li><a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a></li>
