--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <button class="fbmenu">
       <i class="fab fa-facebook"></i>
     </button>
-    <button class="fb">
+    <button class="fbmenu">
       <a href="https://www.facebook.com/phant0m1nc/">Phantom Inc</a>
       <a href="https://www.facebook.com/jnmvisuals/">JNM VISUALS</a>
     </button>
