--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </center>
   </p>
   <p>
-    <center><button class="menu"><i class="fab fa-circle-notch fa-spin"></i>Site Being Built, Hold Tight</button></center>
+    <center><button class="menu"><i class="fas fa-circle-notch fa-spin"></i>Site Being Built, Hold Tight</button></center>
   </p>
   </body>
 
