Old site, welcome new temp site

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     </center>
   </p>
   <p>
-    <center><button class="menu"><i class="fas fa-cog fa-spin"></i> Site Being Built, Hold Tight</button></center>
+    <center>
+      <a href="https://sites.google.com/view/phantominc/"><button class="menu"><i class="fas fa-cog fa-spin" alt="Old Site"></i> Site Being Built, Hold Tight</button></a>
+    </center>
   </p>
   </body>
 
