added flicker link

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <p>
       <center>
   <li><a href="http://phantominc.net"><button class="menu"><i class="fab fa-fort-awesome"></i></button></a></li>
+  <li><a href="https://www.flickr.com/photos/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i></button></a></li>
   <li><a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i></button></a></li>
   <li><a href="https://www.facebook.com/phant0m1nc/"><button class="menu"><i class="fab fa-facebook"></i></button></a></li>
   <li><a href="https://www.youtube.com/jeremysmai"><button class="menu"><i class="fab fa-youtube"></i></button></a></li>
