--- a/support.html
+++ b/support.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<!-- PHANTOM INC 2019 __TEMP SITE
+<!-- PHANTOM INC 2019 __TEMP SITE ~ SUPPORT PAGE ~
         New Site Coming Soon, or building upon this one.
           | ''|
   -->
 <html>
 <head>
-  <title>Phantom Inc (Coming Soon)</title>
+  <title>Phantom Inc (IT Support)</title>
   <link rel="stylesheet" href="css/main.css" />
   <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
@@ -36,9 +36,11 @@
   </p>
   <p>
     <center>
-      <a href="https://sites.google.com/view/phantominc/"><button class="menu"><i class="fas fa-cog fa-spin" alt="Old Site"></i> Site Being Built, Hold Tight</button></a>
-      <a href="https://sites.google.com/view/phantominc/"><button class="menu"><i class="fas fa-yin-yang" alt="Protect Yourself"></i> IT Support</button></a>
+      IT SUPPORT
     </center>
+  </p>
+  <p>
+    Here I can provide links to very common but powerful tools used in the IT field, most tools shown are network related tools to help identify issues on a network. Need to talk ASAP? Feel free to Message/Call me on Discord.
   </p>
   </body>
 
