added spinning logo now and url for support page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <p>
     <center>
       <a href="https://sites.google.com/view/phantominc/"><button class="menu"><i class="fas fa-cog fa-spin" alt="Old Site"></i> Site Being Built, Hold Tight</button></a>
-      <a href="https://sites.google.com/view/phantominc/"><button class="menu"><i class="fas fa-yin-yang" alt="Protect Yourself"></i> IT Support</button></a>
+      <a href="https://github.com/jeremysmai/phantominc/support.html"><button class="menu"><i class="fas fas-atom" alt="Protect Yourself"></i> IT Support</button></a>
     </center>
   </p>
   </body>
