--- a/support.html
+++ b/support.html
@@ -42,6 +42,11 @@
   <p>
     Here I can provide links to very common but powerful tools used in the IT field, most tools shown are network related tools to help identify issues on a network. Need to talk ASAP? Feel free to Message/Call me on Discord.
   </p>
+<!-- Start Listing them supporting links -->
+
+      <p>
+
+      </p>
   </body>
 
   <footer>
