just saving in style

--- a/support.html
+++ b/support.html
@@ -20,13 +20,22 @@
 
     gtag('config', 'UA-122993902-1');
   </script>
+  <style>
+            p{
+              display: block;
+              margin-top: 15em;
+              margin-bottom: 15em;
+              margin-left: 15em;
+              margin-right: 15em;
+            }
+  </style>
 </head>
 
   <body>
   <center><img src="images/fresh_logo.JPG" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
     <p>
       <center>
-  <li><a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"><i class="fab fa-fort-awesome"></i></button></a></li>
+  <li><a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"><i class="fab fa-fort-awesome"></i>HOME</button></a></li>
   <li><a href="https://www.flickr.com/photos/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i></button></a></li>
   <li><a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i></button></a></li>
   <li><a href="https://www.facebook.com/phant0m1nc/"><button class="menu"><i class="fab fa-facebook"></i></button></a></li>
@@ -36,11 +45,12 @@
   </p>
   <p>
     <center>
-      IT SUPPORT
+      <h1>IT SUPPORT<h1>
     </center>
   </p>
   <p>
-    Here I can provide links to very common but powerful tools used in the IT field, most tools shown are network related tools to help identify issues on a network. Need to talk ASAP? Feel free to Message/Call me on Discord.
+    Here I can provide links to very common but powerful tools used in the IT field,
+    most tools shown are network related tools to help identify issues on a network.
   </p>
 <!-- Start Listing them supporting links -->
 
