trying button colors

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
 
     gtag('config', 'UA-122993902-1');
   </script>
+  <style>
+
+  button{
+         outline-color: lime;
+        }
+
+  </style>
 </head>
 
   <body>
