--- a/dabstiny.html
+++ b/dabstiny.html
@@ -6,7 +6,8 @@
 <html>
   	<head>
   		<title>Dabstiny... Redirecting...</title>
-  		<meta https-equiv="REFRESH" content="0;url=https://sites.google.com/view/phantominc/dabstiny">
+  		<meta http-equiv="REFRESH" content="0;url=https://sites.google.com/view/phantominc/dabstiny">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
   	</head>
 
     <body>
