removed version number

--- a/dabstiny.html
+++ b/dabstiny.html
@@ -15,7 +15,7 @@
   	</body>
 
   <footer>
-    <center><b> &copy; Phantom Inc. 2019 version: .02 </b></center>
+    <center><b> &copy; Phantom Inc. 2019 </b></center>
   </footer>
 
 </html>
