--- a/dabstiny.html
+++ b/dabstiny.html
@@ -11,7 +11,7 @@
   	</head>
 
     <body>
-  		<center><b>Redirecting to Dabstiny... </b><i class="fas fa-cog fa-spin" alt="Redirecting"></i></center>
+  		<center><h1>Redirecting to Dabstiny... <i class="fas fa-cog fa-spin" alt="Redirecting"></i></h1></center>
   	</body>
 
   <footer>
