--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <link rel=icon href=images/phantomicon.png sizes="16x16" type="image/png">
     <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122993902-1"></script>
+    <!-- Mobile Site Fix BB -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
