--- a/jukepi.html
+++ b/jukepi.html
@@ -6,7 +6,9 @@
   <html>
   <head>
     <title>JUKE ~ Pi</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Mobile Site Fix BB -->
+      <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <!-- In-page Styling for ya -->
     <style>
     #jukechat {
       width: 100%;
