added embed links

--- a/jukepi.html
+++ b/jukepi.html
@@ -32,12 +32,12 @@
 
     <center><button onclick="jukefeed()">hide/show jukefeed</button></center>
     <div id="jukefeed">
-      jukefeed
+      <iframe src="https://player.twitch.tv/?channel=jukeboxtv_" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe><a href="https://www.twitch.tv/jukeboxtv_?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;">Watch live video from JukeboxTV_ on www.twitch.tv</a>
     </div>
 
     <center><button onclick="jukechat()">hide/show jukechat</button></center>
     <div id="jukechat">
-    jukechat
+    <iframe src="https://www.twitch.tv/embed/jukeboxtv_/chat" frameborder="0" scrolling="no" height="500" width="350"></iframe>
     </div>
 
 
