background color plez and header

--- a/jukepi.html
+++ b/jukepi.html
@@ -10,24 +10,27 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <!-- In-page Styling for ya -->
     <style>
-    #jukechat {
-      width: 100%;
-      padding: 50px 0;
-      text-align: center;
-      background-color: #6441A4;
-      margin-top: 20px;
-    }
-    #jukefeed {
-      width: 100%;
-      padding: 50px 0;
-      text-align: center;
-      background-color: #6441A4;
-      margin-top: 20px;
-    }
+      #body {
+        background-color: #6441A4;
+     }
+      #jukechat {
+        width: 100%;
+        padding: 50px 0;
+        text-align: center;
+        background-color: #6441A4;
+        margin-top: 20px;
+     }
+      #jukefeed {
+        width: 100%;
+        padding: 50px 0;
+        text-align: center;
+        background-color: #6441A4;
+        margin-top: 20px;
+      }
     </style>
     </head>
     <body>
-	<div style="color:white;">
+    <center><h1>JUKEBOX-Pi</h1></center>
     <p>Feed & Chat from <a html="https://www.twitch.tv/jukeboxtv_"></a></p>
 
     <center><button onclick="jukefeed()">hide/show jukefeed</button></center>
