allow chat scrolling

--- a/jukepi.html
+++ b/jukepi.html
@@ -40,7 +40,7 @@
 
     <center><button onclick="jukechat()">hide/show jukechat</button></center>
     <div id="jukechat">
-    <iframe src="https://www.twitch.tv/embed/jukeboxtv_/chat" frameborder="0" scrolling="no" height="500" width="350"></iframe>
+    <iframe src="https://www.twitch.tv/embed/jukeboxtv_/chat" frameborder="0" scrolling="yes" height="500" width="350"></iframe>
     </div>
 
 
