body and center

--- a/jukepi.html
+++ b/jukepi.html
@@ -10,7 +10,9 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <!-- In-page Styling for ya -->
     <style>
-      #body {
+      body {
+        font-family: sans-serif;
+        color: white;
         background-color: #6441A4;
      }
       #jukechat {
@@ -30,8 +32,8 @@
     </style>
     </head>
     <body>
-    <center><h1>JUKEBOX-Pi</h1></center>
-    <p>Feed & Chat from <a html="https://www.twitch.tv/jukeboxtv_"></a></p>
+    <center><h1>JUKEBOX-Pi</h1>
+    <p>Feed & Chat from <a html="https://www.twitch.tv/jukeboxtv_"></a></p></center>
 
     <center><button onclick="jukefeed()">hide/show jukefeed</button></center>
     <div id="jukefeed">
