--- a/jukepi.html
+++ b/jukepi.html
@@ -10,7 +10,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <!-- In-page Styling for ya -->
     <style>
-      body {
+      body,footer {
         font-family: sans-serif;
         color: white;
         background-color: #6441A4;
@@ -32,7 +32,7 @@
     </style>
     </head>
     <body>
-    <center><h1>JUKEBOX-Pi</h1>
+    <center><h1>JUKE-Pi</h1>
     <p>Feed & Chat from <a html="https://www.twitch.tv/jukeboxtv_"></a></p></center>
 
     <center><button onclick="jukefeed()">hide/show jukefeed</button></center>
@@ -66,5 +66,5 @@
     </script>
 
   </body>
-
+<footer> &copy; |'' | 2019 </footer>
   </html>
