--- a/jukepi.html
+++ b/jukepi.html
@@ -14,6 +14,7 @@
         font-family: sans-serif;
         color: white;
         background-color: #6441A4;
+        text-align: center;
      }
       #jukechat {
         width: 100%;
@@ -35,17 +36,30 @@
     </style>
     </head>
     <body>
-    <center><h1>JUKE-Pi</h1>
-    <p>Feed & Chat from <a html="https://www.twitch.tv/jukeboxtv_">JUKEBOXTV_</a></p></center>
+    <h1>JUKE PI</h1>
+    <p>Feed & Chat from <a href="https://www.twitch.tv/jukeboxtv_">JUKEBOXTV_</a></p>
 
     <center><button onclick="jukefeed()">hide/show jukefeed</button></center>
     <div id="jukefeed">
-      <iframe src="https://player.twitch.tv/?channel=jukeboxtv_" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+      <iframe
+      src="https://player.twitch.tv/?channel=jukeboxtv_"
+      frameborder="0"
+      allowfullscreen="true"
+      scrolling="no"
+      height="378"
+      width="620" >
+    </iframe>
     </div>
 
     <center><button onclick="jukechat()">hide/show jukechat</button></center>
     <div id="jukechat">
-    <iframe src="https://www.twitch.tv/embed/jukeboxtv_/chat" frameborder="0" scrolling="yes" height="500" width="350"></iframe>
+     <iframe src="https://www.twitch.tv/embed/jukeboxtv_/chat"
+     id="chat_embed"
+     frameborder="0"
+     scrolling="yes"
+     height="500"
+     width="350">
+     </iframe>
     </div>
 
 
