--- a/jukepi.html
+++ b/jukepi.html
@@ -15,11 +15,11 @@
         color: white;
         background-color: #6441A4;
         text-align: center;
+        padding-top: 10px;
      }
       #jukechat {
         width: 100%;
         padding: 50px 0;
-        text-align: center;
         background-color: #6441A4;
         margin-top: 20px;
         float: right;
@@ -27,7 +27,6 @@
       #jukefeed {
         width: 100%;
         padding: 50px 0;
-        text-align: center;
         background-color: #6441A4;
         margin-top: 20px;
         float: left;
@@ -55,7 +54,7 @@
      <iframe src="https://www.twitch.tv/embed/jukeboxtv_/chat"
      id="chat_embed"
      frameborder="0"
-     scrolling="yes"
+     scrolling="no"
      height="500"
      width="350">
      </iframe>
@@ -82,5 +81,7 @@
     </script>
 
   </body>
-<footer> &copy; |'' | 2019 </footer>
-  </html>
+
+  <footer> |'' | &copy; 2019 </footer>
+
+</html>
